--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,6 @@ name = "Fretem"
 uuid = "e84e15ef-c9df-489c-8bae-19309071f75f"
 authors = ["yizaochen <yizaochen@gmail.com>"]
 version = "0.1.0"
+
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
