--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,9 @@ name = "Fretem"
 uuid = "e84e15ef-c9df-489c-8bae-19309071f75f"
 authors = ["yizaochen <yizaochen@gmail.com>"]
 version = "0.1.0"
+
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
